safari-specific bug fixes; layouts on mobile; labels for hero story

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,10 @@ a:hover {
     top: 110px;
     width: 350px;
     height: 530px;
+
+    box-shadow: 1px 1px 10px #9E9E9E !important;
+    border-radius: 12px;
+    background-color: #ffffff;
 }
 
 .fh5co-hero-inner .fh5co-hero-smartphone > .shadow {
@@ -215,6 +219,8 @@ a:hover {
     box-shadow: 1px 1px 10px #9E9E9E !important;
     border-radius: 12px;
     overflow: hidden;
+
+    display: none;
 }
 
 /* ==========================================================================================================
@@ -633,6 +639,10 @@ a:hover {
     width: 100%;
     height: 100%;
     padding: 0;
+
+    border-radius:12px;
+    overflow:hidden;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 
@@ -1772,7 +1782,7 @@ a:hover {
 
     .fh5co-hero-inner .fh5co-hero-smartphone {
         height: 500px;
-        width: 282px;
+        width: 320px;
         top: 130px;
         margin-top: 70px;
     }
